--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 body {
-    font-size: 100%;
+    font-size: 120%;
     color: black;
 }
 
@@ -35,14 +35,14 @@ p {
 }
 
 .nav-link {
-    font-size: 140%;
+    font-size: 110%;
     color: black !important;
     vertical-align: middle;
 }
 
 .nav-link:hover {
     opacity: 0.7;
-    font-size: 125%;
+    font-size: 115%;
 }
     /* Navbar END */
 
@@ -63,18 +63,25 @@ p {
     text-align: center;
     font-size: x-large;
 }
-
     /* Title page END */
 
 
-@media only screen and (max-width: 600px) {
+    /* Footer */
+.footer{
+    text-align: center;
+    padding: 10px;
+
+}
+
+/* EVENTS */
+.events{
+    height: 90vh;
+}
+
+@media only screen and (max-width: 793px) {
     .nav-logo{
         margin: auto;
         margin-top: 10px;
         margin-bottom: 10px;
-    }
-
-    .nav-item{
-        text-align: left;
     }
 }
